# w3_MachineLearning

./: Diabetes.ipynb  README.md  Untitled35.ipynb  pyproject.toml  requirements.txt  sample_features.csv
data/processed/: _run_meta.json  orders.parquet
reports/: model_card.md
src/bootcamp_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ml_baseline/: main.py  sample_data.py
